修改: 2021-04-18 synchronized关键字: md跳转修改

--- a/_posts/2021-04-18-md1.md
+++ b/_posts/2021-04-18-md1.md
@@ -105,9 +105,9 @@ public class Test1 {
 
 解决这种情况，可以用上synchronized关键字为代码加锁。
 
-[解决办法1：3. synchronized 修饰普通方法](#title3) 
+[解决办法1：3. synchronized 修饰普通方法](#3--synchronized-%E4%BF%AE%E9%A5%B0%E6%99%AE%E9%80%9A%E6%96%B9%E6%B3%95 '跳转')
 
-[解决办法2：5. synchronized 修饰代码块](#title5) 
+[解决办法2：5. synchronized 修饰代码块](#5-synchronized-%E4%BF%AE%E9%A5%B0%E4%BB%A3%E7%A0%81%E5%9D%97) 
 
 
 
