修改分类: [Java, 并发] -> [并发编程]

--- a/_posts/2021-04-16-md1.md
+++ b/_posts/2021-04-16-md1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 并发编程_java线程的六种状态
-categories: [Java, 并发]
+categories: [并发编程]
 description: java线程的六种状态
 keywords: Java, Thread, 多线程
 ---
