--- a/_posts/2021-04-18-md1.md
+++ b/_posts/2021-04-18-md1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 并发编程_synchronized关键字
-categories: [Java, 并发]
+categories: [并发编程]
 description: synchronized关键字的使用方法
 keywords: Java, Thread, 多线程
 ---
