--- a/_posts/2021-04-27-md1.md
+++ b/_posts/2021-04-27-md1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 并发编程_死锁
-categories: [Java, 并发]
+categories: [并发编程]
 description: 并发编程_死锁
 keywords: 死锁, 多线程
 ---
@@ -115,6 +115,6 @@ public class Test1 {
 
 (2)  避免死锁。不预先采取各种措施去破坏死锁的四个条件，而是在资源的动态分配过程中，采取手段去防止死锁。
 
-(3)  检测死锁。构建图模型，转化未有向图的环检测问题。
+(3)  检测死锁。构建图模型，转化为有向图的环检测问题。
 
 (4)  解除死锁。当检测到死锁时，挂起某些进程，回收资源，再将资源进行分配，可以时阻塞的进程转为就绪状态，继续运行。
