--- a/_posts/2021-04-12-md1.md
+++ b/_posts/2021-04-12-md1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 并发编程_线程的创建
-categories: [Java, 并发]
+categories: [并发编程]
 description: 线程的创建
 keywords: Java, Thread, Runnable, 多线程
 ---
