--- a/_posts/2021-04-25-md1.md
+++ b/_posts/2021-04-25-md1.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: 并发编程_wait和notify
-categories: [Java, 并发]
+categories: [并发编程]
 description: 并发编程_wait和notify
 keywords: wait, notify, 多线程
 ---
