--- a/_posts/2021-05-12-md1.md
+++ b/_posts/2021-05-12-md1.md
@@ -188,7 +188,7 @@ public class Provider {
     <dubbo:monitor protocol="registry"/>
 
     <!--dubbo这个服务所要暴露的服务地址所对应的注册中心-->
-    <dubbo:registry address="N/A"/>
+    <!-- <dubbo:registry address="N/A"/> -->
     <dubbo:registry address="zookeeper://localhost:2181" check="false" />
 	
     <!-- 引用配置 -->
