修改标题: 2021-05-12 dubbo_服务提供者和服务消费者的例子 -> XML配置

--- a/_posts/2021-05-12-md1.md
+++ b/_posts/2021-05-12-md1.md
@@ -1,8 +1,8 @@
 ---
 layout: post
-title: dubbo_服务提供者和服务消费者的例子
+title: dubbo_XML配置
 categories: [dubbo]
-description: 介绍了服务提供者和服务消费者的例子
+description: 介绍了XML配置服务提供者和服务消费者的例子
 keywords: dubbo, zookeeper
 ---
 
