--- a/_posts/2021-06-04-md1.md
+++ b/_posts/2021-06-04-md1.md
@@ -12,17 +12,17 @@ keywords: springboot2
 
 SpringBoot官网文档介绍，默认从`/static` (或 `/public` 或 `/resources` 或`/META-INF/resources`)目录中，可以获取得到静态资源文件。默认情况下，资源映射到/** ，但是我们可以通过设置`spring.webflux.static-path-pattern`来调整它。<https://docs.spring.io/spring-boot/docs/2.4.6/reference/html/spring-boot-features.html#boot-features-webflux-static-content>
 
-![默认静态路径](20210604_1.png)
+![默认静态路径](/images/posts/springboot2/20210604_1.png)
 
 测试：
 
 在resources路径中，建立四个文件夹`/static` ， `/public` ， `/resources` ，`/META-INF/resources`。并往里添加静态图片。启动应用并访问。
 
-![项目结构](20210604_2.png)
+![项目结构](/images/posts/springboot2/20210604_2.png)
 
 效果：
 
-![动画](20210604_3.gif)
+![动画](/images/posts/springboot2/20210604_3.gif)
 
 
 
@@ -38,5 +38,5 @@ spring:
 
 重启，看效果：
 
-![动画2](20210604_4.gif)
+![动画2](/images/posts/springboot2/20210604_4.gif)
 
