docs(posts): 1. 修改文章排版

--- a/_posts/2021-12-12-md1.md
+++ b/_posts/2021-12-12-md1.md
@@ -117,17 +117,19 @@ public class GameConsoleSimpleFactory {
 
 输出：
 
-> 开机 >>> 
-> 正在用 playStation 4 玩游戏
-> 关机 >>>
->
-> 开机 >>> 
-> 正在用 Xbox One 玩游戏
-> 关机 >>>
->
-> 开机 >>> 
-> 正在用 Wii U 玩游戏
-> 关机 >>>
+```` 
+开机 >>> 
+正在用 playStation 4 玩游戏
+关机 >>>
+
+开机 >>> 
+正在用 Xbox One 玩游戏
+关机 >>>
+
+开机 >>> 
+正在用 Wii U 玩游戏
+关机 >>>
+````
 
 ##### 优缺点
 
@@ -219,15 +221,17 @@ private void play(GameConsoleFactory gameConsoleFactory) {
 
 输出：
 
-> 开机 >>> 
-> 正在用 playStation 4 玩游戏
-> 关机 >>>
-> 开机 >>> 
-> 正在用 Wii U 玩游戏
-> 关机 >>>
-> 开机 >>> 
-> 正在用 Xbox One 玩游戏
-> 关机 >>>
+````
+开机 >>> 
+正在用 playStation 4 玩游戏
+关机 >>>
+开机 >>> 
+正在用 Wii U 玩游戏
+关机 >>>
+开机 >>> 
+正在用 Xbox One 玩游戏
+关机 >>>
+````
 
 ##### 优缺点
 
@@ -392,20 +396,22 @@ class GameDeviceFactoryTest {
 
 输出：
 
-> 开机 >>> 
-> 正在用 Xbox One 玩游戏
-> 关机 >>>
-> 微软游戏手柄
->
-> 开机 >>> 
-> 正在用 playStation 4 玩游戏
-> 关机 >>>
-> 索尼游戏手柄
->
-> 开机 >>> 
-> 正在用 Wii U 玩游戏
-> 关机 >>>
-> 任天堂游戏手柄
+````
+开机 >>> 
+正在用 Xbox One 玩游戏
+关机 >>>
+微软游戏手柄
+
+开机 >>> 
+正在用 playStation 4 玩游戏
+关机 >>>
+索尼游戏手柄
+
+开机 >>> 
+正在用 Wii U 玩游戏
+关机 >>>
+任天堂游戏手柄
+````
 
 ##### 优缺点
 
