--- a/_posts/2021-12-13-md1.md
+++ b/_posts/2021-12-13-md1.md
@@ -93,14 +93,16 @@ class DogTest {
 
 输出：
 
->Dog 构造函数。
->Dog 构造函数。
->false
->true
->dog:白色
->dog2:白色
->dog:黑色
->dog2:黑色
+````
+Dog 构造函数。
+Dog 构造函数。
+false
+true
+dog:白色
+dog2:白色
+dog:黑色
+dog2:黑色
+````
 
 ### 分析
 
@@ -147,14 +149,16 @@ Dog:
 
 最后执行测试类，输出：
 
-> Dog 构造函数。
-> Dog 构造函数。
-> false
-> false
-> dog:白色
-> dog2:白色
-> dog:黑色
-> dog2:白色
+````
+Dog 构造函数。
+Dog 构造函数。
+false
+false
+dog:白色
+dog2:白色
+dog:黑色
+dog2:白色
+````
 
 结果第四行 `dog.getColor() == dog2.getColor()` 的输出是false，第7行，dog改变颜色变成黑色，没有影响到第8行dog2的白色。拷贝成功。
 
